# useful

./:  docker-compose.yml  .gitignore  Dockerfile  LICENSE  README.md  aerich.ini  alembic.ini  docker-compose.yml  main.py  prestart.sh  pyproject.toml
migrations/models/: 0_20210920194240_init.sql  0_20210921183419_init.sql  1_20210920195155_update.sql  1_20210921203639_update.sql  2_20210921122620_update.sql
scripts/: createsuperuser.py
src/app/: routers.py
src/app/auth/: api.py  crud.py  jwt.py  logic.py  models.py  permissions.py  schemas.py  send_email.py  service.py
src/app/base/: crud_base.py  service_base.py
src/app/base/utils/: email.py  generate.py
src/app/blog/: models.py  routers.py  schemas.py  service.py
src/app/blog/endpoint/: category.py  comment.py  post.py  tag.py
src/app/board/: models.py  schemas.py  service.py
src/app/board/endpoint/: category.py  project.py  task.py  toolkit.py
src/app/user/: api.py  crud.py  models.py  schemas.py  service.py
src/app/user/endpoint/: admin.py  users.py
src/config/: settings.py  social_app.py  social_app.py-exp.py
src/db/: base.py  session.py
